--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,16 @@
 cmake_minimum_required(VERSION 3.3)
 
-# TODO: rename me!
-project(MYPROJECT)
+project(data_structures)
 
 # Force c++11.
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(PROGRAM_NAME ${PROJECT_NAME})
-set(LIBRARY_NAME ${PROJECT_NAME}-lib)
+set(LIBRARY_NAME ${PROJECT_NAME})
 set(TEST_PROGRAM_NAME ${PROJECT_NAME}-test)
 
-# Build wrapper executable.
-add_executable(${PROGRAM_NAME} main.cpp)
-target_link_libraries(${PROGRAM_NAME} ${LIBRARY_NAME} cz tracy)
-
 # Add test program.
-if (MYPROJECT_BUILD_TESTS)
+if (DATA_STRUCTURES_BUILD_TESTS)
     file(GLOB_RECURSE TEST_SRCS tests/*.cpp)
     add_executable(${TEST_PROGRAM_NAME} ${TEST_SRCS})
     target_include_directories(${TEST_PROGRAM_NAME} PUBLIC src cz/test_base)
