GNU Global process .tpp files

--- a/gtags.conf
+++ b/gtags.conf
@@ -70,7 +70,7 @@ gtags:\
 	:tc=common:\
 	:tc=builtin-parser:
 builtin-parser:\
-	:langmap=c\:.c.h,yacc\:.y,asm\:.s.S,java\:.java,cpp\:.c++.cc.hh.cpp.cxx.hxx.hpp.C.H,php\:.php.php3.phtml:
+	:langmap=c\:.c.h,yacc\:.y,asm\:.s.S,java\:.java,cpp\:.c++.cc.hh.cpp.cxx.tpp.hxx.hpp.C.H,php\:.php.php3.phtml:
 #
 # skeleton for user's custom parser.
 #
@@ -96,7 +96,7 @@ exuberant-ctags|plugin-example|setting to use Exuberant Ctags plug-in parser:\
 	:langmap=Basic\:.bas.bi.bb.pb:\
 	:langmap=BETA\:.bet:\
 	:langmap=C\:.c:\
-	:langmap=C++\:.c++.cc.cp.cpp.cxx.h.h++.hh.hp.hpp.hxx.C.H:\
+	:langmap=C++\:.c++.cc.cp.cpp.cxx.tpp.h.h++.hh.hp.hpp.hxx.C.H:\
 	:langmap=C#\:.cs:\
 	:langmap=Cobol\:.cbl.cob.CBL.COB:\
 	:langmap=DosBatch\:.bat.cmd:\
@@ -193,7 +193,7 @@ universal-ctags|setting to use Universal Ctags plug-in parser:\
 	:langmap=BETA\:.bet:\
 	:langmap=Clojure\:.clj.cljs.cljc:\
 	:langmap=C\:.c:\
-	:langmap=C++\:.c++.cc.cp.cpp.cxx.h.h++.hh.hp.hpp.hxx.inl:\
+	:langmap=C++\:.c++.cc.cp.cpp.cxx.tpp.h.h++.hh.hp.hpp.hxx.inl:\
 	:langmap=CSS\:.css:\
 	:langmap=C#\:.cs:\
 	:langmap=ctags\:.ctags:\
@@ -228,7 +228,7 @@ universal-ctags|setting to use Universal Ctags plug-in parser:\
 	:langmap=MatLab\:.m:\
 	:langmap=Myrddin\:.myr:\
 	:langmap=ObjectiveC\:.mm.m.h:\
-	:langmap=OldC++\:.c++.cc.cp.cpp.cxx.h.h++.hh.hp.hpp.hxx.inl:\
+	:langmap=OldC++\:.c++.cc.cp.cpp.cxx.tpp.h.h++.hh.hp.hpp.hxx.inl:\
 	:langmap=OldC\:.c:\
 	:langmap=OCaml\:.ml.mli.aug:\
 	:langmap=passwd\:(passwd):\
@@ -388,7 +388,7 @@ pygments-parser|Pygments plug-in parser:\
 	:langmap=Boo\:.boo:\
 	:langmap=Bro\:.bro:\
 	:langmap=C#\:.cs:\
-	:langmap=C++\:.c++.cc.cp.cpp.cxx.h.h++.hh.hp.hpp.hxx.C.H:\
+	:langmap=C++\:.c++.cc.cp.cpp.cxx.tpp.h.h++.hh.hp.hpp.hxx.C.H:\
 	:langmap=COBOLFree\:.cbl.CBL:\
 	:langmap=COBOL\:.cob.COB.cpy.CPY:\
 	:langmap=CUDA\:.cu.cuh:\
